# bank-marketing-classification

./: Makefile  README.md  pyproject.toml
bank_marketing_classification/: custom_preproc.py  download_data.py  feature_engineering.py  make_predictions.py  models.py  split_data.py  train_models.py  unzip_data.py
bank_marketing_classification/data/: download_data.py  split_data.py  unzip_data.py
bank_marketing_classification/features/: make_features.py
bank_marketing_classification/models/: models.py  train_models.py
bank_marketing_classification/preprocessing/: custom_preproc.py  feature_engineering.py
bank_marketing_classification/visualizations/: make_charts.py
data/interim/: bank_teste.csv  bank_train.csv
data/predictions/: bank_test_predictions.csv
data/splits/: bank_test.csv
models/: dt.pkl  dt.pkl.old  gb.pkl  gb.pkl.old  lr.pkl  lr.pkl.old  rf.pkl  rf.pkl.old  svc.pkl  svc.pkl.old
notebooks/: 1.0-data-exploration.ipynb  2.0-model-analysis.ipynb  2.0-preprocessing.ipynb
tests/: test_bank_marketing_classification.py
