[tool.poetry]
name = "bank-marketing-classification"
version = "0.1.0"
description = ""
authors = ["Silas Genário <sg.lopes26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.1"
sklearn = "^0.0"
category-encoders = "^2.5.0"
joblib = "^1.1.0"
loguru = "^0.6.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
altair = "^4.2.0"
jupyterlab = "^3.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
